syntax = "proto3";
package pb_game;
option go_package = "server/pb/pb_game";
option csharp_namespace = "Pb.game";     //给c#提供的选项
message SyncGateLinkState {
  string  ErrorCode = 1;
}

